finish workshop 4 docs

--- a/workshop4/workshop4A.Rmd
+++ b/workshop4/workshop4A.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'BM424 workshop: infectious disease outbreak control'
 author: "Morgan Feeney"
-date: "17/03/2023"
+date: "07/03/2024"
 output: 
   bookdown::html_document2:
     toc: true
@@ -28,7 +28,7 @@ The `r city_name` Pandemic Response committee has gathered the following informa
 
 You should evaluate the effect(s) of the actions that you took at your last meeting and evaluate the current state of affairs in `r city_name`. 
 
-You should submit 3-5 specific actions for further actions to control the pandemic, using the [workshop 4 pro forma](../proformas/BM424_workshop4_proforma.docx) (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 24th, via the submission link on MyPlace. 
+You should submit 3-5 specific actions for further actions to control the pandemic, using the [workshop 4 pro forma](../proformas/BM424_workshop4_proforma.docx) (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 15th, via the submission link on MyPlace. 
 
 ## Minutes from the last Pandemic Response Committee Meeting
 
@@ -283,5 +283,33 @@ Some of the Legionella strains found in `r city_name` are reportedly resistant t
 ***
 ## Data gathered
 
-
+Table 1. Surveillance of hospital critical care capacity during the `r city_name` <i>Legionella</i> outbreak.
+<table>
+<table border="1">
+  <tr>
+    <th>Date</th>
+    <th>ICU bed occupancy</th>
+  </tr>
+  <tr>
+    <td>25/02/2024</td>
+    <td>13</td>
+  </tr>
+  <tr>
+    <td>27/02/2024</td>
+    <td>11</td>
+  </tr>
+  <tr>
+    <td>29/02/2024</td>
+    <td>11</td>
+  </tr>
+    <tr>
+    <td>02/03/2024</td>
+    <td>7</td>
+  </tr>
+  <tr>
+  <td>04/03/2024</td>
+  <td>5</td>
+  </tr>
+</table>  
+<br><br>
 
