--- a/workshop4/workshop4H.Rmd
+++ b/workshop4/workshop4H.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'BM424 workshop: infectious disease outbreak control'
 author: "Morgan Feeney"
-date: "17/03/2023"
+date: "07/03/2024"
 output: 
   bookdown::html_document2:
     toc: true
@@ -19,7 +19,7 @@ library(knitr)
 city_name <- "Dalessie"
 hospital_name <- "Fairview"
 dis_name8 <- "<i>Streptococcus pyogenes</i>"
-outbreak_deaths <- 26 + 12 + 9
+outbreak_deaths <- 26
 
 ```
 
@@ -29,7 +29,7 @@ The `r city_name` Pandemic Response committee has gathered the following informa
 
 You should evaluate the effect(s) of the actions that you took at your last meeting and evaluate the current state of affairs in `r city_name`. 
 
-You should submit 3-5 specific actions for further actions to control the pandemic, using the [workshop 4 pro forma](../proformas/BM424_workshop4_proforma.docx) (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 24th, via the submission link on MyPlace. 
+You should submit 3-5 specific actions for further actions to control the pandemic, using the [workshop 4 pro forma](../proformas/BM424_workshop4_proforma.docx) (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 15th, via the submission link on MyPlace. 
 
 ## Minutes from the last Pandemic Response Committee Meeting
 
@@ -285,7 +285,6 @@ The `r city_name` Pandemic Response Committee have pushed for a fast track for v
 
 Some of the <i>Streptococcus</i> strains found in `r city_name` are reportedly resistant to all clinically available antibiotics, and scientists warn that these drug-resistant pathogens might be able to spread to new locations. Will nearby towns be next, or could these "superbugs" go as global as the SARS-COV2 virus did? How safe is our food and drink?
 
-## Data gathered
 
 
 
